--- a/index.html
+++ b/index.html
@@ -26,36 +26,38 @@
     header {
       background-color: #1b263b;
       width: 100%;
-      padding: 20px 0;
-      font-size: 2em;
+      padding: 16px 0;
+      font-size: 1.5rem;
       text-align: center;
     }
 
     #timer {
-      font-size: 1.5em;
-      margin: 20px;
+      font-size: 1.2rem;
+      margin: 16px;
       color: var(--accent-color);
       font-weight: 500;
+      text-align: center;
+      padding: 0 10px;
     }
 
     .carousel {
       display: flex;
       overflow-x: scroll;
-      gap: 12px;
-      padding: 20px;
+      gap: 10px;
+      padding: 16px 10px;
       scroll-snap-type: x mandatory;
       -webkit-overflow-scrolling: touch;
       width: 100%;
-      max-width: 95vw;
+      box-sizing: border-box;
     }
 
     .carousel img {
-      height: 240px;
-      border-radius: 16px;
+      height: 180px;
+      border-radius: 12px;
       flex-shrink: 0;
       object-fit: cover;
       scroll-snap-align: center;
-      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
       transition: transform 0.3s ease;
     }
 
@@ -65,10 +67,12 @@
 
     audio, .spotify-button {
       margin: 20px;
+      width: 90%;
+      max-width: 320px;
     }
 
     .heart-animation {
-      font-size: 2rem;
+      font-size: 1.5rem;
       animation: pulse 1.5s infinite;
       color: var(--accent-color);
     }
@@ -110,7 +114,7 @@
   </audio>
 
   <div class="spotify-button">
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1OubIZ0ARYCUq5kceYUQiO?si=d65f16ca85ce4e53" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1OubIZ0ARYCUq5kceYUQiO?si=d65f16ca85ce4e53" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </div>
 
   <script>
