--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
     .carousel {
       display: flex;
       overflow-x: scroll;
-      gap: 10px;
-      padding: 16px 10px;
       scroll-snap-type: x mandatory;
       -webkit-overflow-scrolling: touch;
       width: 100%;
@@ -52,17 +50,14 @@
     }
 
     .carousel img {
-      height: 180px;
-      border-radius: 12px;
+      width: 100vw;
+      height: 100vw;
+      border-radius: 0;
       flex-shrink: 0;
       object-fit: cover;
-      scroll-snap-align: center;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-      transition: transform 0.3s ease;
-    }
-
-    .carousel img:hover {
-      transform: scale(1.05);
+      scroll-snap-align: start;
+      box-shadow: none;
+      transition: none;
     }
 
     audio, .spotify-button {
