--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Nosso Tempo Juntos</title>
   <style>
     :root {
@@ -12,12 +12,16 @@
       --font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    body {
-      font-family: var(--font);
-      background-color: var(--primary-color);
-      color: var(--text-color);
+    html, body {
+      height: 100%;
       margin: 0;
       padding: 0;
+      background-color: var(--primary-color);
+      color: var(--text-color);
+      font-family: var(--font);
+    }
+
+    body {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -42,7 +46,7 @@
 
     .carousel {
       display: flex;
-      overflow-x: scroll;
+      overflow-x: auto;
       scroll-snap-type: x mandatory;
       -webkit-overflow-scrolling: touch;
       width: 100%;
@@ -106,7 +110,10 @@
 
     #overlay {
       position: fixed;
-      inset: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       background-color: #0d1b2a;
       color: white;
       display: flex;
@@ -114,9 +121,6 @@
       justify-content: center;
       align-items: center;
       z-index: 9999;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
     }
 
     #startButton {
@@ -139,7 +143,7 @@
     <button id="startButton">Clique ❤️</button>
   </div>
 
-  <div id="mainContent" style="display: none;">
+  <div id="mainContent" style="display: none; width: 100%;">
     <header>Nosso Tempo Juntos <span class="heart-animation">❤️</span></header>
     <div id="timer"></div>
     <section class="carousel">
@@ -160,17 +164,14 @@
       <img src="foto15.jpg" alt="Foto 15">
       <img src="foto16.jpg" alt="Foto 16">
     </section>
-
     <div class="cantadas" id="cantada-container">
       <img id="cantada-img" src="fig1.png" alt="cantada imagem">
       <p id="cantada"></p>
     </div>
-
     <audio controls>
       <source src="seu_audio.mp3" type="audio/mpeg">
       Seu navegador não suporta áudio.
     </audio>
-
     <div class="spotify-button">
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1OubIZ0ARYCUq5kceYUQiO?si=d65f16ca85ce4e53" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
@@ -194,7 +195,7 @@
       setInterval(updateTimer, 1000);
       updateTimer();
 
-      const cantadas = [
+      const cantadas = [...document.getElementById("cantada").textContent = [
         "Você não é Wi-Fi, mas definitivamente me conectou.",
         "Seu nome é Google? Porque você tem tudo o que eu procuro.",
         "Se beleza fosse tempo, você seria eternidade.",
@@ -225,17 +226,13 @@
         "Você é o sol do meu sistema solar.",
         "Você não é celular, mas me dá vontade de te desbloquear o tempo todo.",
         "Você é poema? Porque cada palavra sua rima com felicidade."
-      ];
+      ][Math.floor(Math.random() * 30)];
 
       const imagens = ["fig1.png", "fig2.png", "fig3.png", "fig4.png", "fig5.png"];
-      const randIndex = Math.floor(Math.random() * cantadas.length);
       const randImg = Math.floor(Math.random() * imagens.length);
-      const imgSide = Math.random() < 0.5 ? 'left' : 'right';
-
-      document.getElementById("cantada").textContent = cantadas[randIndex];
       const imgElement = document.getElementById("cantada-img");
       imgElement.src = imagens[randImg];
-      imgElement.classList.add(imgSide === 'left' ? 'left' : '');
+      imgElement.classList.add(Math.random() < 0.5 ? 'left' : '');
 
       document.getElementById("startButton").addEventListener("click", function () {
         document.getElementById("overlay").style.display = "none";
