--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       100% { transform: scale(1); }
     }
 
- <div id="mainContent" style="display: none; width: 100%;">
+ <div id="mainContent" style="display: block; width: 100%;">
     <header>Nosso Tempo Juntos <span class="heart-animation">❤️</span></header>
     <div id="timer"></div>
     <section class="carousel">
