--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       <img src="foto6A.jpg" alt="Foto 6">
       <img src="foto7A.jpg" alt="Foto 7">
       <img src="foto8A.jpg" alt="Foto 8">
+      <img src="foto9A.jpg" alt="Foto 8">
       <img src="foto1.jpg" alt="Foto 1">
       <img src="foto2.jpg" alt="Foto 2">
       <img src="foto3.jpg" alt="Foto 3">
@@ -271,5 +272,6 @@
   </script>
 </body>
 </html>
+
 
 
