--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
     <header>Nosso Tempo Juntos <span class="heart-animation">❤️</span></header>
     <div id="timer"></div>
     <section class="carousel">
-      <img src="foto1A.jpg" alt="Foto 1">
+      <img src="foto1A.JPG" alt="Foto 1">
       <img src="foto2A.jpg" alt="Foto 2">
-      <img src="foto3A.jpg" alt="Foto 3">
-      <img src="foto4A.jpg" alt="Foto 4">
+      <img src="foto3A.JPG" alt="Foto 3">
+      <img src="foto4A.JPG" alt="Foto 4">
       <img src="foto5A.jpg" alt="Foto 5">
-      <img src="foto6A.jpg" alt="Foto 6">
-      <img src="foto7A.jpg" alt="Foto 7">
-      <img src="foto8A.jpg" alt="Foto 8">
+      <img src="foto6A.JPG" alt="Foto 6">
+      <img src="foto7A.JPG" alt="Foto 7">
+      <img src="foto8A.JPG" alt="Foto 8">
       <img src="foto1.jpg" alt="Foto 1">
       <img src="foto2.jpg" alt="Foto 2">
       <img src="foto3.jpg" alt="Foto 3">
@@ -271,6 +271,7 @@
   </script>
 </body>
 </html>
+
 
 
 
